<resources>
    <string name="app_name">Exercise is Fun!</string>
    <string name="logo">Logo</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="go_to_the_objective_to_gain_points">Go to the objective to gain points!</string>
    <string name="back">Go back</string>
    <string name="go_to_maps">Go to maps</string>
    <string name="take">Take photo</string>
    <string name="image_loaded">TakenPhoto</string>
    <string name="claim">Claim Reward</string>
    <string name="reward_text">You won 100 points! You can immortalize this achievement by taking a photo!</string>
    <string name="selected_photo_from_the_list">Selected photography of the list</string>
    <string name="notification_default_text">Some challenges running in Exercise is Fun are now completed.</string>
    <string name="notification_default_summary">Challenges completed!</string>
    <string name="notification_default_title">Come back to Exercise is Fun to claim your rewards!</string>
    <string name="main_menu_challenges_button">View challenges</string>
    <string name="main_menu_photos_button">View all completed challenges photos</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_map">Go to map</string>
    <string name="refresh">Refresh</string>
    <string name="claim_reward">Claim Reward!</string>
    <string name="congratulations">Congratulations! Now claim your reward</string>
    <string name="accept">Accept</string>
    <string name="challenge_default">Challenge</string>
    <string name="loading">Loading…</string>
    <string name="check_distance">Check distance</string>
</resources>