<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/md_yellow_100">

    <Button
        android:id="@+id/btnChallenges"
        android:layout_width="323dp"
        android:layout_height="68dp"
        android:text="@string/main_menu_challenges_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTotalPoints"
        app:layout_constraintVertical_bias="0.288" />

    <Button
        android:id="@+id/btnViewAllPhotos"
        android:layout_width="323dp"
        android:layout_height="68dp"
        android:text="@string/main_menu_photos_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChallenges"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/tvTotalPoints"
        android:layout_width="259dp"
        android:layout_height="110dp"
        android:autoSizeMaxTextSize="100sp"
        android:autoSizeMinTextSize="12sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="sans-serif-light"
        android:textAlignment="center"
        android:textColor="@color/md_yellow_900"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tvTotalPoints"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        android:contentDescription="@string/logo" />

</androidx.constraintlayout.widget.ConstraintLayout>